Automatic determination of filePath (in path of client)